# jit-rs

./: Cargo.toml  README.md
benches/: basic.rs  square_vec.rs
examples/: audio.rs  test.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: build_ctx.rs  counter.rs  lib.rs  main.rs  syntax.rs  tokens.rs  types.rs
src/build_ctx/: ops.rs
src/codegen/: cast.rs  externals.rs  intrinsics.rs  misc.rs  mod.rs
src/common/: numbers.rs
src/macro_builder/: mod.rs
src/mir/: assertions.rs  binary_expr.rs  blocks.rs  calls.rs  cast.rs  constants.rs  expression.rs  functions.rs  intrinsic_fns.rs  intrinsics.rs  misc.rs  mod.rs  operators.rs  statement.rs  structures.rs  ty.rs  types.rs  variables.rs
src/tree_parser/: cursor.rs  error.rs  macros.rs  mod.rs  mod_old.rs  module.rs  parser.rs  types.rs
src/tree_parser/module/: after_expression.rs  body.rs  calls.rs  constants.rs  expression.rs  function.rs  grouped.rs  literals.rs  operators.rs  structs.rs  ty.rs
src/tree_parser/types/: after_expression.rs  body.rs  expression.rs  function.rs  grouped.rs  literals.rs  operators.rs  ty.rs
