[package]
name = "jit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm15-0",
] }
macros = { path = "./macros" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "basic"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
